--- a/ABM.Paie.Formation/wwwroot/css/app.css
+++ b/ABM.Paie.Formation/wwwroot/css/app.css
@@ -105,8 +105,8 @@ code {
 /* --- - GENERAL - --- */
 /* --- --- --- --- --- */
 
-#body {
-  padding: 0 0.5rem;
+body {
+  margin: 0 0.5rem;
 }
 
 #footer {
@@ -119,6 +119,7 @@ code {
   color: var(--color);
   justify-content: center;
 }
+
 #footer > div {
   display: flex;
   flex-wrap: wrap;
@@ -147,6 +148,10 @@ h2, .h2 {
 h1, .h1, h2, .h2 {
   --fontfamily: 'Permanent Marker Regular';
   scroll-margin-top: 80px;
+}
+
+h3, .h3 {
+  color: var(--primary);
 }
 
 .banner {
