--- a/Common/Components/NavBar.razor.css
+++ b/Common/Components/NavBar.razor.css
@@ -4,8 +4,7 @@
   top: 0;
   z-index: 1;
   box-shadow: 0 0.125rem 0.25rem 0.125rem var(--white);
-  margin: 0.5rem 0;
-  padding: 0.5rem 0 0 0;
+  padding: 0.5rem 0;
 }
 
 .common__nav, .common__nav > ul {
