--- a/Common/wwwroot/css/Spacing.css
+++ b/Common/wwwroot/css/Spacing.css
@@ -2,7 +2,7 @@
   margin: 0;
 }
 .mt-0 {
-  margin-right: 0;
+  margin-top: 0;
 }
 .mb-0 {
   margin-bottom: 0;
@@ -26,7 +26,7 @@
   margin: 0.25rem;
 }
 .mt-1 {
-  margin-right: 0.25rem;
+  margin-top: 0.25rem;
 }
 .mb-1 {
   margin-bottom: 0.25rem;
@@ -50,7 +50,7 @@
   margin: 0.5rem;
 }
 .mt-2 {
-  margin-right: 0.5rem;
+  margin-top: 0.5rem;
 }
 .mb-2 {
   margin-bottom: 0.5rem;
@@ -74,7 +74,7 @@
   margin: 1rem;
 }
 .mt-3 {
-  margin-right: 1rem;
+  margin-top: 1rem;
 }
 .mb-3 {
   margin-bottom: 1rem;
@@ -98,7 +98,7 @@
   margin: 1.5rem;
 }
 .mt-4 {
-  margin-right: 1.5rem;
+  margin-top: 1.5rem;
 }
 .mb-4 {
   margin-bottom: 1.5rem;
@@ -122,7 +122,7 @@
   margin: 2rem;
 }
 .mt-5 {
-  margin-right: 2rem;
+  margin-top: 2rem;
 }
 .mb-5 {
   margin-bottom: 2rem;
@@ -135,7 +135,7 @@
 }
 .mx-5 {
   margin-left: 2rem;
-  margin-right: 3rem;
+  margin-right: 2rem;
 }
 .my-5 {
   margin-top: 2rem;
@@ -146,7 +146,7 @@
   margin: auto;
 }
 .mt-auto {
-  margin-right: auto;
+  margin-top: auto;
 }
 .mb-auto {
   margin-bottom: auto;
@@ -167,169 +167,169 @@
 }
 
 .p-0 {
-  margin: 0;
+  padding: 0;
 }
 .pt-0 {
-  margin-right: 0;
+  padding-top: 0;
 }
 .pb-0 {
-  margin-bottom: 0;
+  padding-bottom: 0;
 }
 .ps-0 {
-  margin-left: 0;
+  padding-left: 0;
 }
 .pe-0 {
-  margin-right: 0;
+  padding-right: 0;
 }
 .px-0 {
-  margin-left: 0;
-  margin-right: 0;
+  padding-left: 0;
+  padding-right: 0;
 }
 .py-0 {
-  margin-top: 0;
-  margin-bottom: 0;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 .p-1 {
-  margin: 0.25rem;
+  padding: 0.25rem;
 }
 .pt-1 {
-  margin-right: 0.25rem;
+  padding-top: 0.25rem;
 }
 .pb-1 {
-  margin-bottom: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 .ps-1 {
-  margin-left: 0.25rem;
+  padding-left: 0.25rem;
 }
 .pe-1 {
-  margin-right: 0.25rem;
+  padding-right: 0.25rem;
 }
 .px-1 {
-  margin-left: 0.25rem;
-  margin-right: 0.25rem;
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 }
 .py-1 {
-  margin-top: 0.25rem;
-  margin-bottom: 0.25rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .p-2 {
-  margin: 0.5rem;
+  padding: 0.5rem;
 }
 .pt-2 {
-  margin-right: 0.5rem;
+  padding-top: 0.5rem;
 }
 .pb-2 {
-  margin-bottom: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 .ps-2 {
-  margin-left: 0.5rem;
+  padding-left: 0.5rem;
 }
 .pe-2 {
-  margin-right: 0.5rem;
+  padding-right: 0.5rem;
 }
 .px-2 {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 .py-2 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .p-3 {
-  margin: 1rem;
+  padding: 1rem;
 }
 .pt-3 {
-  margin-right: 1rem;
+  padding-top: 1rem;
 }
 .pb-3 {
-  margin-bottom: 1rem;
+  padding-bottom: 1rem;
 }
 .ps-3 {
-  margin-left: 1rem;
+  padding-left: 1rem;
 }
 .pe-3 {
-  margin-right: 1rem;
+  padding-right: 1rem;
 }
 .px-3 {
-  margin-left: 1rem;
-  margin-right: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 .py-3 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .p-4 {
-  margin: 1.5rem;
+  padding: 1.5rem;
 }
 .pt-4 {
-  margin-right: 1.5rem;
+  padding-top: 1.5rem;
 }
 .pb-4 {
-  margin-bottom: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 .ps-4 {
-  margin-left: 1.5rem;
+  padding-left: 1.5rem;
 }
 .pe-4 {
-  margin-right: 1.5rem;
+  padding-right: 1.5rem;
 }
 .px-4 {
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 .py-4 {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .p-5 {
-  margin: 2rem;
+  padding: 2rem;
 }
 .pt-5 {
-  margin-right: 2rem;
+  padding-top: 2rem;
 }
 .pb-5 {
-  margin-bottom: 2rem;
+  padding-bottom: 2rem;
 }
 .ps-5 {
-  margin-left: 2rem;
+  padding-left: 2rem;
 }
 .pe-5 {
-  margin-right: 2rem;
+  padding-right: 2rem;
 }
 .px-5 {
-  margin-left: 2rem;
-  margin-right: 2rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 .py-5 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .p-auto {
-  margin: auto;
+  padding: auto;
 }
 .pt-auto {
-  margin-right: auto;
+  padding-top: auto;
 }
 .pb-auto {
-  margin-bottom: auto;
+  padding-bottom: auto;
 }
 .ps-auto {
-  margin-left: auto;
+  padding-left: auto;
 }
 .pe-auto {
-  margin-right: auto;
+  padding-right: auto;
 }
 .px-auto {
-  margin-left: auto;
-  margin-right: auto;
+  padding-left: auto;
+  padding-right: auto;
 }
 .py-auto {
-  margin-top: auto;
-  margin-bottom: auto;
+  padding-top: auto;
+  padding-bottom: auto;
 }
