--- a/ABM.Paie.Formation/Pages/Contact.razor
+++ b/ABM.Paie.Formation/Pages/Contact.razor
@@ -15,7 +15,7 @@
     Afin d'organiser au mieux mes journées de travail entre formation et ingénierie de formation, 
     j'ai bloqué des créneaux dédiés pour un échange individuel, complet et personnalisé avec vous.
     <br />
-    <Operation Model=@new(UriProvider.Get(AbmUri.RendezVous), new(IconPath.CalendarMonth, "primary")) /> @* TODO *@
+    <Operation Model=@new(UriProvider.Get(AbmUri.RendezVous), new(IconPath.CalendarMonth, Class: "primary")) /> @* TODO *@
 </Paragraph>
 
 <Section Model=@UriProvider.Get(AbmUri.Coordonnees) Level=SectionLevel.H2 />
