--- a/Common/Components/BaseComponent.razor
+++ b/Common/Components/BaseComponent.razor
@@ -10,7 +10,7 @@
 
     protected override void OnInitialized()
     {
-        _ = _builder.Append(Class);
+        _ = _builder.Add(Class);
         base.OnInitialized();
     }
 }
