--- a/Common/Components/Icon.razor
+++ b/Common/Components/Icon.razor
@@ -4,7 +4,7 @@
 @inherits BaseComponent
 
 @{
-    _ = _builder.Append("common__icon");
+    _ = _builder.Add("common__icon");
     
     if (Content is not null)
     {
