--- a/Common/Components/Operations/Activator.razor
+++ b/Common/Components/Operations/Activator.razor
@@ -4,7 +4,7 @@
 @inherits BaseComponent
 
 @{
-    _ = _builder.Append("common__activator").Append(Model.Class); 
+    _ = _builder.Add("common__activator").Add(Model.Class); 
 }
 
 <div class=@_builder>
