--- a/Common/Components/Image.razor
+++ b/Common/Components/Image.razor
@@ -2,7 +2,7 @@
 @inherits BaseComponent
 
 @{
-    _ = _builder.Append("common__image"); 
+    _ = _builder.Add("common__image"); 
 }
 
 <img class=@_builder src=@Source aria-label=@Label />
