--- a/Common/Components/Paragraph.razor
+++ b/Common/Components/Paragraph.razor
@@ -1,7 +1,7 @@
 ﻿@inherits BaseComponent
 
 @{
-    _ = _builder.Append("common__paragraph"); 
+    _ = _builder.Add("common__paragraph"); 
 }
 
 <p class=@_builder>
