--- a/Common/Components/Templates/QuoteTemplate.razor
+++ b/Common/Components/Templates/QuoteTemplate.razor
@@ -2,7 +2,7 @@
 @inherits BaseComponent
 
 @{
-    _ = _builder.Append("common__quote"); 
+    _ = _builder.Add("common__quote"); 
 }
 
 <div class=@_builder>
