--- a/Common/Components/Activator.razor
+++ b/Common/Components/Activator.razor
@@ -1,6 +1,6 @@
 ﻿@using Common.Enumerations
 @using Common.Extensions
-@using Common.Models.Operations
+@using Common.Models
 @inherits BaseComponent
 
 @{
