--- a/Common/Components/NavBar.razor
+++ b/Common/Components/NavBar.razor
@@ -1,4 +1,4 @@
-﻿@using Common.Models.Operations
+﻿@using Common.Models
 @using Microsoft.AspNetCore.Components.Web
 
 <nav class="common__nav" aria-label="Barre de navigation">
