--- a/Common/Components/Quote.razor
+++ b/Common/Components/Quote.razor
@@ -6,7 +6,7 @@
 }
 
 <div class=@_builder>
-    <span>@Model?.Text</span> <span>@Model?.Author</span>
+    <span>@Model?.Text</span> <span class="name">@Model?.Author</span>
 </div>
 
 @code {
