--- a/Common/Components/DropDown.razor
+++ b/Common/Components/DropDown.razor
@@ -1,8 +1,5 @@
-﻿@using Common.Components.Operations
-@using Common.Components.Templates;
-@using Common.Enumerations;
+﻿@using Common.Enumerations;
 @using Common.Models
-@using Common.Models.Operations
 @using Microsoft.AspNetCore.Components.Web
 @typeparam T
 @inherits BaseComponent
