--- a/Common/Components/Paragraph.razor.css
+++ b/Common/Components/Paragraph.razor.css
@@ -1,7 +1,7 @@
 ﻿.common__paragraph {
     font-size: var(--fontsize);
     background-color: var(--filled--color);
-    color: var(--color);
+    color: inherit;
     line-height: 200%;
 }
 
