move: bar, new, quote, recap

--- a/ABM.Paie.Formation/Components/Quote.razor
+++ b/ABM.Paie.Formation/Components/Quote.razor
@@ -1,4 +1,6 @@
-﻿@using Common.Models
+﻿@using ABM.Paie.Formation.Models
+@using Common.Components
+@using Common.Models
 @inherits BaseComponent
 
 @{
