--- a/ABM.Paie.Formation/Pages/AbmPaie.razor
+++ b/ABM.Paie.Formation/Pages/AbmPaie.razor
@@ -1,4 +1,5 @@
 ﻿@page "/abmpaie"
+@using ABM.Paie.Formation.Components
 @using ABM.Paie.Formation.Enumerations
 @using ABM.Paie.Formation.Resources
 @using ABM.Paie.Formation.Services
