--- a/ABM.Paie.Formation/Pages/Home.razor
+++ b/ABM.Paie.Formation/Pages/Home.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@using ABM.Paie.Formation.Components
 @using ABM.Paie.Formation.Enumerations
 @using ABM.Paie.Formation.Extensions
 @using ABM.Paie.Formation.Resources
